--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,9 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <script src="https://kit.fontawesome.com/466f7f0339.js" crossorigin="anonymous"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,700;1,600&family=Prompt:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>
