--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,700;1,600&family=Prompt:wght@300&display=swap" rel="stylesheet">
+    <script src="./js/scroll.js"></script>
   </head>
   <body>
     <noscript>
